--- a/client/app.css
+++ b/client/app.css
@@ -12,7 +12,7 @@ body {
 
 
 /* Main Manu - navigation */
-.menu-main button {
+.menu-main .btn {
   padding-left: 2em;
   padding-right: 2em;
   font-size: 2em;
