--- a/client/app.css
+++ b/client/app.css
@@ -33,3 +33,20 @@ body {
 .car-option.not-available {
   opacity: .4;
 }
+
+
+
+/* Loader Indicator */
+#loader-indicator img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 16px;
+  height: 16px;
+  margin-top: -8px;
+  margin-left: -8px;
+}
+
+#loader-indicator.fade.in {
+  display: block !important;
+}
