--- a/client/app.css
+++ b/client/app.css
@@ -33,6 +33,7 @@ body {
 
 /* Reserve */
 .car-option {
+  border: 2px solid white;
   cursor: pointer;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -41,10 +42,12 @@ body {
 }
 
 .car-option:hover {
+  border-color: #B2D7F8;
   background-color: #B2D7F8;
 }
 
 .car-option.selected {
+  border-color: #428bca;
   background-color: #428bca;
   color: white;
 }
