--- a/client/src/index.less
+++ b/client/src/index.less
@@ -1,3 +1,6 @@
+/* Limit witdh for big screens (desktop) */
+@max-width: 600px;
+
 body {
   padding-top: 70px;
   text-align: center;
@@ -11,6 +14,7 @@ body {
 
 /* Header */
 .title {
+  max-width: @max-width;
   font-size: 2em;
   padding-top: .15em;
   padding-left: 10px;
@@ -18,7 +22,7 @@ body {
 }
 
 .content {
-  max-width: 600px; /* Limit witdh for big screens (desktop) */
+  max-width: @max-width;
   margin: 0 auto;
 }
 
