--- a/client/src/reserve/reserve.less
+++ b/client/src/reserve/reserve.less
@@ -1,11 +1,24 @@
 /* Reserve */
 .car-option {
+  position: relative;
   border: 2px solid white;
   cursor: pointer;
   border-radius: 10px;
   margin-bottom: 10px;
   overflow: hidden;
   background-color: #DDD;
+
+  .overlay-selected {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    margin: 0;
+    padding: 2px 30px;
+    border-bottom-left-radius: 10px;
+    font-weight: bold;
+  }
 }
 
 .car-option:hover {
@@ -17,6 +30,11 @@
   border-color: #428bca;
   background-color: #428bca;
   color: white;
+
+  .overlay-selected {
+    background: #428bca;
+    display: block;
+  }
 }
 
 .car-option.not-available {
