client/reserve: set fixed img sizes for iPhone

--- a/client/src/reserve/reserve.less
+++ b/client/src/reserve/reserve.less
@@ -45,6 +45,13 @@
   width: 100%;
 
   /* Set exact size for common screen sizes to avoid layouting while loading images */
+  // iPhone 5
+  @media only screen and (min-width : 320px) and (max-width: 320px) {
+    width: 316px;
+    height: 158px;
+  }
+
+  // Desktop
   @media only screen and (min-width : 600px) {
     width: 596px;
     height: 298px;
