--- a/client/src/index.less
+++ b/client/src/index.less
@@ -32,7 +32,7 @@
 // @import "../bower_components/bootstrap/less/jumbotron.less";
 // @import "../bower_components/bootstrap/less/thumbnails.less";
 // @import "../bower_components/bootstrap/less/alerts.less";
-// @import "../bower_components/bootstrap/less/progress-bars.less";
+@import "../bower_components/bootstrap/less/progress-bars.less";
 // @import "../bower_components/bootstrap/less/media.less";
 @import "../bower_components/bootstrap/less/list-group.less";
 // @import "../bower_components/bootstrap/less/panels.less";
@@ -139,3 +139,4 @@ body {
 @import "menu";
 @import "reserve/reserve";
 @import "existing/existing";
+@import "fancy_file_input";
