client/finish: fuel state slider

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -140,3 +140,10 @@ body {
 @import "reserve/reserve";
 @import "existing/existing";
 @import "fancy_file_input";
+
+
+@import "../lib/bootstrap-slider";
+
+.slider.slider-horizontal {
+  width: 100%;
+}
