client: show hand cursor on labels

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -63,6 +63,10 @@ body {
   text-align: center;
 }
 
+label {
+  cursor: pointer;
+}
+
 /* Avoid opening toolbar/address bar when clicking a button at the bottom of the page */
 .footer-ios-hack {
   line-height: 15px;
