client/finish: redo based on last call
- admin does finish
- can fix the tachometer (previously filled by dealer; not implemented yet)
- no documents upload

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -151,3 +151,18 @@ label {
 .slider.slider-horizontal {
   width: 100%;
 }
+
+
+// Finish
+.checkbox {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  width: 152px;
+  label {
+    font-weight: bold;
+    input {
+      cursor: pointer;
+    }
+  }
+}
