client/finish: only finish when everything is filled out

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -166,3 +166,8 @@ label {
     }
   }
 }
+
+.btn-finish {
+  // So that it does not change width when changing "Ulozit"/"Ukoncit".
+  width: 140px;
+}
